Ambient Occlusion crashes CUDA #100246

Closed
opened 2022-08-06 18:42:52 +02:00 by Mattia · 12 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.15

Blender Version
Broken: version: 3.3.0 Beta, branch: master, commit date: 2022-07-29 15:54, hash: cfd16c04f8
Also tried 2022-08-05 3.3.0 Beta and 3.4.0 with no difference

Broken between 0e9367fc29 and b985437283

Short description of error
"Illegal address in CUDA queue copy_from_device (integrator_intersect_closets)" when trying to visualize the AO node output. The render halts while the overlays keep updating and the rest of the interface responds.
The bug happens more sporadically on Optix.

Exact steps for others to reproduce the error

  • On the default file, switch to the Shader Editor and enter rendered view (with Cycles set to CUDA GPU)
  • Add an Ambient Occlusion node to the material
  • Visualize the AO node output (i.e. using Node Wrangler shortcut to create a viewer node)

The order of operations seems to make a difference.

AObug.blend

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.15 **Blender Version** Broken: version: 3.3.0 Beta, branch: master, commit date: 2022-07-29 15:54, hash: `cfd16c04f8` Also tried 2022-08-05 3.3.0 Beta and 3.4.0 with no difference **Broken between** 0e9367fc29 and b985437283 **Short description of error** "Illegal address in CUDA queue copy_from_device (integrator_intersect_closets)" when trying to visualize the AO node output. The render halts while the overlays keep updating and the rest of the interface responds. The bug happens more sporadically on Optix. **Exact steps for others to reproduce the error** - On the default file, switch to the Shader Editor and enter rendered view (with Cycles set to CUDA GPU) - Add an Ambient Occlusion node to the material - Visualize the AO node output (i.e. using Node Wrangler shortcut to create a viewer node) The order of operations seems to make a difference. [AObug.blend](https://archive.blender.org/developer/F13349599/AObug.blend)
Author

Added subscriber: @MoonMoth

Added subscriber: @MoonMoth

Added subscriber: @Harvester

Added subscriber: @Harvester

Here on:

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.93

Blender version: 3.3.0 Beta, branch: master, commit date: 2022-08-06 22:01, hash: 800c7dbf41
and
Blender version: 3.4.0 Alpha, branch: master, commit date: 2022-08-06 22:09, hash: 8b51bd61fd

Out of tenth of attempts, I was able to reproduce the issue only one time in versions 3.3.

Here on: **System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.93 Blender version: 3.3.0 Beta, branch: master, commit date: 2022-08-06 22:01, hash: `800c7dbf41` and Blender version: 3.4.0 Alpha, branch: master, commit date: 2022-08-06 22:09, hash: `8b51bd61fd` Out of tenth of attempts, I was able to reproduce the issue only one time in versions 3.3.
Author

I tried to update my drivers just to make sure; nothing changed: the error is there every single time.

Also I was wrong and sometimes I get the issue on Optix too.

I tried to update my drivers just to make sure; nothing changed: the error is there every single time. Also I was wrong and sometimes I get the issue on Optix too.
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

Thanks for the report. Could you upload .blend in which you're able to replicate the issue frequently?

Thanks for the report. Could you upload .blend in which you're able to replicate the issue frequently?
Author

While trying to check the repeatability of the bug I think I found that the order of operation matters: it seems like I have less issues if the AO node is already present before entering rendered view while I consistently get the bug if I do the connection "live".

I'll update the description accordingly but now it seems pointless to append a .blend when the point is to add the node after entering rendered view.

While trying to check the repeatability of the bug I think I found that the order of operation matters: it seems like I have less issues if the AO node is already present before entering rendered view while I consistently get the bug if I do the connection "live". I'll update the description accordingly but now it seems pointless to append a .blend when the point is to add the node *after* entering rendered view.
Member

Changed status from 'Needs User Info' to: 'Needs Triage'

Changed status from 'Needs User Info' to: 'Needs Triage'

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 6a4f4810f3

This issue was referenced by 6a4f4810f38b2efc49d55dad6960f610f166773f

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2022-08-18 20:17:07 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#100246
No description provided.