Fix T100246: Cycles GPU render error when adding AO node during viewport render